<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/bold"
            android:text="@string/que_tal_de_animo"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="?attr/itemTextColor"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/courageGrid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/bold"
            android:text="@string/fecha_seleccionada"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/itemTextColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/courageGrid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <GridLayout
            android:id="@+id/courageGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="12dp"
            android:columnCount="5"
            android:gravity="center|center_horizontal|center_vertical"
            android:rowCount="1"
            app:layout_constraintBottom_toTopOf="@+id/buttonOk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/table_symptoms_margin"
                android:contentDescription="@string/_0"
                android:gravity="center"
                android:text="@string/courage_0"
                android:textSize="36sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/table_symptoms_margin"
                android:contentDescription="@string/_1"
                android:gravity="center"
                android:text="@string/courage_1"
                android:textSize="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/table_symptoms_margin"
                android:contentDescription="@string/_2"
                android:gravity="center"
                android:text="@string/courage_2"
                android:textSize="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/table_symptoms_margin"
                android:contentDescription="@string/_3"
                android:gravity="center"
                android:text="@string/courage_3"
                android:textSize="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/table_symptoms_margin"
                android:contentDescription="@string/_4"
                android:gravity="center"
                android:text="@string/courage_4"
                android:textSize="36sp" />

        </GridLayout>

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="76dp"
            android:background="?attr/colorPrimary"
            android:fontFamily="@font/bold"
            android:text="@string/aceptar"
            android:textColor="?attr/colorSurface"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courageGrid" />

        <TextView
            android:id="@+id/alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/bold"
            android:text=""
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/itemTextColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonOk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courageGrid"
            app:layout_constraintVertical_bias="0.49" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>