<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundColor">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_food"
            android:textColor="?attr/itemTextColor"
            android:fontFamily="@font/bold"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/write_new_food"
            android:textColor="?attr/itemTextColor"
            android:fontFamily="@font/bold"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/newFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/foods_search_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:autofillHints="Añadir alimento"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="?attr/colorPrimary"
            android:textColor="?attr/colorSurface"
            android:fontFamily="@font/bold"
            android:textSize="16sp"
            android:text="@string/btn_accept"/>
    </LinearLayout>
</LinearLayout>